--- a/app/src/main/res/layout/row_image.xml
+++ b/app/src/main/res/layout/row_image.xml
@@ -31,7 +31,7 @@
             android:layout_height="300dp"
             android:layout_below="@+id/deletenumber"
             android:padding="5dp"
-            android:scaleType="centerInside"
+            android:scaleType="fitCenter"
             android:src="@drawable/dummy" />
     </RelativeLayout>
 
